# Api-spotify

./: .gitignore  .spotify_cache  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: mkdocs.yml
api-reference/: index.html
architecture/: index.html
config/: __init__.py  bigquery_schema.py  settings.py
deployment/: index.html
docs/: api-reference.md  architecture.md  deployment.md  getting-started.md  index.md  spotify-api-guide.md
getting-started/: index.html
pipelines/: __init__.py  etl_pipeline.py
scripts/: monitor_costs.py  run_etl.py  run_streamlit.py  setup_bigquery.py
search/: search_index.json
spotify-api-guide/: index.html
src/: __init__.py
src/bigquery/: __init__.py  client.py  loader.py
src/spotify/: __init__.py  client.py  extractor.py  transformers.py
src/utils/: logger.py  validators.py
streamlit_app/: main.py
streamlit_app/pages/: 1_📊_Dashboard.py  2_🎵_Tracks.py  3_🎤_Artists.py  4_📈_Trends.py
streamlit_app/utils/: __init__.py  queries.py
tests/: test_extractor.py  test_loader.py  test_transformer.py
